fixed alignment issues with safari

--- a/src/Components/card.css
+++ b/src/Components/card.css
@@ -92,7 +92,7 @@
 .home-profile-text {
   position: absolute;
   left:0px;
-  top: 60%;
+  top: 56%;
   margin-left: 8%;
   margin-right: 8%;
 }
